# streaming

./: .gitignore  .travis.yml  LICENSE  Main.hs  README.md  Setup.hs  Stream.cabal  Streaming.cabal  Streaming.hs  all.sh  changelog.md  mk.sh  nix-ci-ish.sh  stack.yaml  streaming.cabal  upload.sh
.github/workflows/: stack-ci.yaml
Stream/: Interop.hs  Prelude.hs  Types.hs
Stream/Folding/: ByteString.hs  Prelude.hs
Stream/FreeT/: Prelude.hs
Stream/List/: Prelude.hs
Stream/Producer/: Prelude.hs
Streaming/: Internal.hs  Prelude.hs
Streaming/Internal/: Folding.hs  Prelude.hs
Streaming/Prelude/: Direct.hs  Fused.hs
benchmarks/: StreamingTest.hs  benchmarks.hs
benchmarks/Stream/: Combinators.hs  Internal.hs  Types.hs
benchmarks/Stream/Prelude/: Direct.hs  Fused.hs  SPEC.hs  SPEC2.hs
benchmarks/old/: benchmarks.hs
benchmarks/old/Stream/: ByteString.hs
benchmarks/old/Stream/Prelude/: Folding.hs
lts/: lts-2.22.yaml  lts-6.35.yaml  lts-9.4.yaml
notes/: README.md  datalist.txt  general.txt  ghc_list.hs  java_stream.html
snapshots/: lts-6.35.yaml  nightly-2017-12-09.yaml
src/: Streaming.hs
src/Data/: AnnotatedQueue.hs
src/Data/Functor/: Of.hs
src/Streaming/: Internal.hs  ListT.hs  Prelude.hs
test/: test.hs
tests/: Main.hs
