name:                stream
version:             0.1.0.0
synopsis:            Stream is an optimized FreeT
                     and (consequently) Producer and ListT-like type.
description:         Stream is an optimized variant of FreeT which 
                     moreover admits a build/foldr style optimization scheme.
                     It can be used wherever FreeT is used, but is focused
                     on employment with functors like ((,) a) which generate
                     effectful lists. 
license:             BSD3
license-file:        LICENSE
author:              michaelt
maintainer:          what_is_it_to_do_anything@yahoo.com
stability:           Experimental
homepage:            https://github.com/michaelt/series
bug-reports:         https://github.com/michaelt/series/issues
category:            Data, Pipes
build-type:          Simple
extra-source-files:
  .gitignore
  README.md
  Main.hs
  notes/*
  
cabal-version:       >=1.10


library
  exposed-modules:     Stream.Combinators, 
                       Stream.Prelude,
                       Stream.Prelude.Direct,
                       Stream.Folding.Prelude, 
                       Stream.FreeT.Prelude,
                       Stream.List.Prelude,
                       Stream.Producer.Prelude,
                       Stream.Types, 
                       Stream.ByteString,
                       Stream.Folding.ByteString, 
                       Stream.Interop
    -- other-modules:       
  other-extensions:    LambdaCase, RankNTypes, EmptyCase, 
                       StandaloneDeriving, FlexibleContexts, 
                       DeriveDataTypeable, DeriveFoldable, 
                       DeriveFunctor, DeriveTraversable, 
                       UndecidableInstances
  
  build-depends:       base >=4.7 && <4.9
                     , pipes
                     , foldl
                     , text
                     , mtl >=2.1 && <2.3
                     , mmorph >=1.0 && <1.2
                     , transformers >=0.3 && <0.5
                     , free >=4.9 && <4.13
                     , bytestring
               --      , remorse
  
  default-language:    Haskell2010
  ghc-options:      -O2 
  
-- benchmark benchmarks
--     default-language: Haskell2010
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   benchmarks
--     main-is:          Benchmarks.hs
--     ghc-options:      -O2 -rtsopts -threaded  -ddump-rule-firings
--
--     build-depends:
--       base == 4.*,
--       criterion,
--       transformers,
--       pipes,
--       vector,
--       series,
--       free >=4.9 && <4.11,
--   --    logict,
--       remorse
--   --    fuse
--   -- darcs get http://hub.darcs.net/ertes-ag/fuse

